--- a/xuecheng-plus-media/xuecheng-plus-media-service/pom.xml
+++ b/xuecheng-plus-media/xuecheng-plus-media-service/pom.xml
@@ -12,6 +12,12 @@
     <description>xuecheng-plus-media-service</description>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
